--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
 		"terser-webpack-plugin": "^5.3.0",
 		"webpack": "^5.65.0",
 		"webpack-stream": "^7.0.0"
+	},
+	"dependencies": {
+		"swiper": "^8.2.4"
 	}
 }
