--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"gulp-changed": "^4.0.3",
 		"gulp-concat": "^2.6.1",
 		"gulp-imagemin": "^8.0.0",
+		"gulp-install": "^1.1.0",
 		"gulp-less": "^5.0.0",
 		"gulp-less-glob": "^1.0.0",
 		"gulp-noop": "^1.0.1",
